# aas-core3.1-golang

./: .gitignore  LICENSE  README.md  go.mod
.github/workflows/: ci-for-dev-scripts.yml  ci.yml
_dev_scripts/: download_aas_core_meta_model.py  download_latest_test_data.py  pyproject.toml  reformat_code.py  regenerate_code.py  rerecord_tests.py  update_all.py
_dev_scripts/codegen/snippets/: repo_url.txt
_dev_scripts/continuous_integration_of_dev_scripts/: precommit.py
aastesting/: common_jsonization.go  constants.go  deep_equal.go  tracing.go
constants/: constants.go
enhancing/: enhancing.go
enhancing/test/: enhancing_test.go
jsonization/: jsonization.go
jsonization/test/: classes_with_descendants_test.go  common_test.go  concrete_classes_test.go  enums_test.go
stringification/: stringification.go
testdata/Descend/AdministrativeInformation/: maximal.json.trace
testdata/Descend/AnnotatedRelationshipElement/: maximal.json.trace
testdata/Descend/AssetAdministrationShell/: maximal.json.trace
testdata/Descend/BasicEventElement/: maximal.json.trace
testdata/Descend/Blob/: maximal.json.trace
testdata/Descend/Capability/: maximal.json.trace
testdata/Descend/Entity/: maximal.json.trace
types/: types.go
types/descend_test/: common.go  descend_once_test.go  descend_test.go
types/is_xxx_test/: is_xxx_test.go
types/xxx_or_default_test/: xxx_or_default_test.go
verification/: verification.go
verification/test/: verification_test.go
xmlization/: xmlization.go
xmlization/test/: common_test.go  concrete_classes_test.go  edge_cases_test.go
(+308 files in other folders)
